# stl-lab

./: CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/week1/: vector_bench.cpp
docs/: plan.md  week1.md
docs/delivery/: week1.md
docs/notebook/week1/: notebook.md
docs/week1/: report.md  week1.md
include/: simple_bench.hpp
src/labs/week1/: codegen_access.cpp  codegen_access.s  iterator_failure  iterator_failure.cpp  iterator_failure_map.cpp  iterator_failure_unordered_map.cpp  iterator_failure_vector.cpp  swap_assign_lab.cpp
